[fix]: reset password updated